--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,37 @@ body {
         line-height: 26px;
         font-weight: 400;
         letter-spacing: 0.05em;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        letter-spacing: 0.05em;
+        color: #1F3F68;
+        opacity: 0.6;
+    }
+
+    .header2 {
+        font-weight: 500px;
+        font-size: 44px;
+        text-align: center;
+    }
+
+    .header3 {
+        font-size: 36px;
+        text-align: center;
+        font-weight: 300;
+        line-height: 46px;
+        letter-spacing: 0.05em;
+        color: #1F3F68;
+
+    }
+
+    .header4 {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: 0.05em;
+        color: #1F3F68;
+
     }
 
     .container {
@@ -79,12 +110,7 @@ body {
     }
 
     .brandDescription {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 26px;
-        letter-spacing: 0.05em;
-        color: #1F3F68;
-        opacity: 0.6;
+
         max-width: 430px;
         margin-top: 32px;
     }
@@ -109,41 +135,76 @@ body {
 
 
 
-// .ourTeam {
-//     padding-top: 64px;
+.advantages {
+    padding-top: 64px;
 
-//     .TeamCardsBox {
-//         display: flex;
-//         justify-content: space-between;
-//         padding-top: 64px;
-//         padding-bottom: 64px;
+    .advantagesCardsBox {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 64px;
+        padding-bottom: 64px;
 
-//         .Teamscard {
-//             width: 359px;
-//             padding: 44px 32px;
-//             box-sizing: border-box;
-//             /*fixe card sixe*/
-//             background: #FFFFFF;
-//             box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
-//             border-radius: 10px;
-//             display: flex;
-//             flex-direction: column;
+        @media (max-width: 1279px) {
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: center;
+            padding-top: 32px;
 
-//             .TeamsCardImg {
-//                 align-self: center;
-//                 margin-bottom: 51px;
-//             }
 
-//             .TeamsCardLink {
-//                 font-weight: 400;
-//                 font-size: 14px;
-//                 line-height: 30px;
-//                 letter-spacing: 0.05em;
-//                 color: #5A98D0;
-//                 text-decoration: none;
-//                 margin-top: 30px;
-//             }
-//         }
-//     }
+        }
+        @media (max-width: 768px) {
+           padding: 32px 0px;
 
-// }
+        }
+
+
+        .advantageCard {
+            @media (max-width: 1279px) {
+                margin-top: 32px;
+
+            }
+            @media (max-width: 768px) {
+                padding: 44px 16px;
+                width: 300px;
+             }
+
+            width: 360px;
+            padding: 44px 32px;
+            box-sizing: border-box;
+            /*fixe card sixe*/
+            background: #FFFFFF;
+            box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+
+
+            .advantageCardImg {
+                align-self: center;
+                margin-bottom: 51px;
+            }
+
+            .advantageCardHeader {
+                margin-bottom: 20px;
+                color: #1F3F68;
+            }
+
+            .learnMore_block {
+                display: flex;
+                margin-top: 30px;
+
+                .advantageCardLink {
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 30px;
+                    letter-spacing: 0.05em;
+                    color: #5A98D0;
+                    text-decoration: none;
+                    margin-right: 16px;
+
+                }
+            }
+        }
+    }
+
+}
