--- a/style.scss
+++ b/style.scss
@@ -130,10 +130,10 @@ body {
         text-decoration: none;
         display: inline-block;
         margin-top: 70px;
+
+
     }
 }
-
-
 
 .advantages {
     padding-top: 64px;
@@ -152,8 +152,9 @@ body {
 
 
         }
+
         @media (max-width: 768px) {
-           padding: 32px 0px;
+            padding: 32px 0px;
 
         }
 
@@ -163,10 +164,11 @@ body {
                 margin-top: 32px;
 
             }
+
             @media (max-width: 768px) {
                 padding: 44px 16px;
                 width: 300px;
-             }
+            }
 
             width: 360px;
             padding: 44px 32px;
@@ -207,4 +209,324 @@ body {
         }
     }
 
+}
+
+.project {
+
+    .projectText {
+        margin: 32px auto 64px auto;
+        width: 75%;
+        text-align: center;
+    }
+
+    .projectBlocks {
+
+        .projectBlock {
+            position: relative;
+            flex-grow: 1;
+        }
+
+        .projectBlock_img {
+            width: 100%;
+        }
+
+        .projectBlock_install {
+
+            .projectImgText {
+                font-weight: 400;
+                font-size: 32px;
+                line-height: 46px;
+                text-align: right;
+                letter-spacing: 0.05em;
+                color: #FFFFFF;
+                position: absolute;
+                top: 40px;
+                right: 40px;
+
+                @media (max-width: 1279px) {
+                    font-size: 24px;
+                }
+
+                @media (max-width: 767px) {
+                    font-size: 20px;
+                    top: 16px;
+                    right: 16px;
+                }
+            }
+        }
+
+        .projectBlock_lowLine {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 32px;
+
+            @media (max-width: 767px) {
+                flex-direction: column;
+                margin-top: 16px;
+            }
+
+            .projectBlock_app {
+                margin-right: 32px;
+                position: relative;
+                flex-grow: 1;
+
+                @media (max-width: 767px) {
+                    margin-right: 0px;
+                    margin-bottom: 16px;
+                }
+
+                .projectImgText {
+                    position: absolute;
+                    font-weight: 400;
+                    font-size: 28px;
+                    line-height: 46px;
+                    letter-spacing: 0.05em;
+                    color: #FFFFFF;
+                    left: 20px;
+                    top: 20px;
+
+                    @media (max-width: 1279px) {
+                        font-size: 20px;
+                        ;
+                    }
+                }
+            }
+
+            .projectBlock_safetySystem {
+                position: relative;
+                flex-grow: 1;
+
+                .projectImgText {
+                    position: absolute;
+                    font-weight: 400;
+                    font-size: 28px;
+                    line-height: 46px;
+                    letter-spacing: 0.05em;
+                    color: #FFFFFF;
+                    left: 20px;
+                    top: 20px;
+
+                    @media (max-width: 1279px) {
+                        font-size: 20px;
+                        ;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.contact {
+    .contactHeaderBlock {
+        background-image: url(pictures/contact_background_header.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 150px;
+        min-width: 100vw;
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+
+        .contactHeader {
+            color: #FFFFFF;
+
+            @media (max-width: 767px) {
+                font-size: 30px;
+
+
+            }
+        }
+
+        .contactHeaderDescription {
+            color: #FFFFFF;
+            margin-top: 16px;
+            opacity: 1;
+            max-width: 780px;
+        }
+    }
+
+    .sendUsMessageBlock {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 50px;
+
+
+        .sendUsMessageBlock_header {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 30px;
+            letter-spacing: 0.04em;
+            color: #1F3F68;
+            margin-bottom: 24px;
+
+        }
+
+        .sendUsMessageBlock_contacts {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            max-width: 300px;
+
+
+            .sendUsMessageBlock_address,
+            .sendUsMessageBlock_phone,
+            .sendUsMessageBlock_onlineService {
+                margin-top: 30px;
+
+            }
+        }
+
+        .sendUsMessageBlock_wrap {
+            display: flex;
+            align-items: center;
+
+            :first-child {
+                margin-right: 18px;
+                margin-bottom: 10px;
+            }
+        }
+
+        .sendUsMessageBlock_phone,
+        .sendUsMessageBlock_onlineService {
+
+            :nth-child(2) {
+                margin-bottom: 10px;
+
+            }
+        }
+
+
+
+
+
+
+
+        .sendUsMessageBlock_form {
+            display: flex;
+            flex-direction: column;
+            max-width: 540px;
+            box-shadow: 5px 10px 50px rgba(16, 112, 177, 0.2);
+            border-radius: 10px;
+            padding: 56px;
+            @media (max-width: 1279px) {
+                margin-top: 60px;
+            }
+
+            @media (max-width: 767px) {
+                max-width: 342px;
+                box-sizing: border-box;
+                align-items: left;
+                padding: 35px;
+                margin-top: 40px;
+            }
+
+            .form_header {
+                margin-bottom: 48px;
+
+            @media (max-width: 767px) {
+                margin-bottom: 30px;
+            }
+
+            }
+
+            input {
+                box-sizing: border-box;
+                border: 1px solid rgba(53, 110, 173, 0.4);
+                border-radius: 10px;
+                width: 428px;
+                height: 72px;
+                font-size: 16px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                margin-bottom: 32px;
+
+                @media (max-width: 767px) {
+                    max-width: 270px;
+                    max-height: 50px;
+                    margin-bottom: 20px;
+
+
+                }
+            }
+
+            input::placeholder {
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                opacity: 0.2;
+                padding-left: 36px;
+                padding-top: 20px;
+            }
+
+            textarea {
+                border: 1px solid rgba(100, 110, 173, 0.4);
+                border-radius: 10px;
+                width: 428px;
+                height: 160px;
+
+                @media (max-width: 767px) {
+                    max-width: 270px;
+
+                }
+            }
+
+            textarea::placeholder {
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                opacity: 0.2;
+                padding-left: 36px;
+                padding-top: 20px;
+
+            }
+
+            label {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 30px;
+                letter-spacing: 0.04em;
+                color: #1F3F68;
+                opacity: 0.8;
+                margin-bottom: 8px;
+            }
+
+            .form_but {
+                box-shadow: 5px 10px 20px rgba(16, 112, 177, 0.2);
+                border: none;
+                background-color: #5A98D0;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 26px;
+                text-align: center;
+                letter-spacing: 0.04em;
+                color: #FFFFFF;
+                padding: 24px 180px;
+                border-radius: 10px;
+                margin-top: 72px;
+
+                @media (max-width: 767px) {
+                    width: 270px;
+                    box-sizing: border-box;
+                    padding: 16px 100px;
+                    margin-top: 30px;
+
+                }
+            }
+        }
+    }
+
+    .map_block{
+
+        padding: 0 150px;
+        margin: 100px ;
+        margin-bottom: 100px;
+    }
 }
